[package]
name = "rusite"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10"
actix-files = "0.6.6"
tera = "1.20.0"
tokio = { version = "1.45.0", features = [ "full", "fs" ] }

serde = {version = "1.0.219", features = [ "derive" ]}
serde_json = "1.0.140"

env_logger = "0.11.8"
dotenv = "0.15.0"
log = "0.4.27"
chrono = { version = "0.4.41", features = [ "serde" ] }

utoipa = "5.3.1"
utoipa-swagger-ui = {version = "9.0.1", features = [ "actix-web" ]}

uuid = { version = "1.16.0", features = [ "v4", "serde" ] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "mysql", "uuid", "chrono" ] }
openssl = "0.10.72"
actix-cors = "0.7.1"

[dev-dependencies]
httpc-test = "0.1.10"
